--- a/index.html
+++ b/index.html
@@ -1,56 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Calculator</title>
-        <link href="styles.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
-        <script src="javascript.js"></script>
-    </head>
-
-    <body>
-        <div class='all-things'>
-            <div class="calc-descriptions">
-                <div class="calc-name">
-                    <img src="images/casio-logo.svg" href="Casio Logo">
-                    <h2>HS-8VA</h2>
-                </div>
-
-                <div class="two-way-power">
-                    <buttton class="power">POWERRRRR</buttton>
-                    <h4>Two Way Power</h4>
-                </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>iPhone Calculator Clone</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="calculator">
+        <div class="top-container">
+            <div class="clock">
+                <span class="hour"></span>:<span class="minutes"></span>          
             </div>
-
-            <div class="calc-grid">      
-                <div class="output">
-                    <div data-previous-operand class="previous-operand">9547</div>
-                    <div data-current-operand class="current-operand">+3642</div>
-                </div>
-
-                <button data-all-clear class="span-two allclear">AC</button>
-                <button data-delete class="delete-btn">DEL</button> 
-                <button data-operation class="sign">÷</button> 
-                <button data-number>1</button> 
-                <button data-number>2</button> 
-                <button data-number>3</button> 
-                <button data-operation class="sign">X</button> 
-                <button data-number>4</button> 
-                <button data-number>5</button> 
-                <button data-number>6</button> 
-                <button data-operation class="sign">+</button> 
-                <button data-number>7</button> 
-                <button data-number>8</button> 
-                <button data-number>9</button> 
-                <button data-operation class="sign">-</button> 
-                <button data-number>.</button> 
-                <button data-number>0</button> 
-                <button data-equals class="span-two equals-btn">=</button>
+            <div class="status">
+                <img src="images/status.png" alt="status">
             </div>
         </div>
-    </body>
+
+        <div class="value">0</div>
+        
+
+        <div class="buttons-container">
+            <div class="button function ac">AC</div>
+            <div class="button function pm">±</div>
+            <div class="button function percent">%</div>
+            <div class="button operator division">÷</div>
+                <div class="button number-7">7</div>
+                <div class="button number-8">8</div>
+                <div class="button number-9">9</div>
+                <div class="button operator multiplication">×</div>
+                    <div class="button number-4">4</div>
+                    <div class="button number-5">5</div>
+                    <div class="button number-6">6</div>
+                    <div class="button operator subtraction">-</div>
+                        <div class="button number-1">1</div>
+                        <div class="button number-2">2</div>
+                        <div class="button number-3">3</div>
+                        <div class="button operator addition">+</div>
+                            <div class="button number-0">0</div>
+                            <div class="button decimal">.</div>
+                            <div class="button operator equal">=</div>
+        </div>
+    </div>
+<script src="javascript.js"></script>
+</body>
 </html>
